# Library-System

./: CMakeLists.txt  README.md  book_management.c  book_management.h  interface.c  interface.h  main.c  unit_tests.c  unit_tests2.c  user.c  user.h
text_files_backup/: users.txt  users_tests.txt
